# scrapbook

./: Cargo.toml  LICENSE
src/: extract.rs  lib.rs  partial.rs  section.rs  section_data.rs  template_engine.rs
src/template_engine/: handlebars.rs
src/types/: empty_data.rs  master_data_cloned.rs  master_data_ref.rs  mod.rs
